--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "bootstrap": "5.3.2",
         "bootstrap-datepicker": "^1.10.0",
         "bootstrap-editable": "^1.0.1",
+        "bootstrap-icons": "^1.11.3",
         "bootstrap-maxlength": "^1.10.1",
         "bootstrap-touchspin": "^4.7.0",
         "chart.js": "^2.9.4",
