--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "post-install-cmd": [
+        "@php artisan cache:clear",
+        "@php artisan config:clear",
+        "@php artisan config:cache"
+    ]
     }
 }
