--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "composer install && php artisan config:cache"
     },
     "devDependencies": {
         "axios": "^1.6.2",
